force-app/main/default/objects/CEE_Fournisseur__mdt/CEE_Fournisseur__mdt.object-meta.xml
<CustomObject>
    <label>CEE Fournisseur</label>
    <pluralLabel>CEE Fournisseurs</pluralLabel>
</CustomObject>