force-app/main/default/objects/CEE_Fournisseur__mdt/fields/CEE__c.field-meta.xml
<CustomField>
    <fullName>CEE__c</fullName>
    <label>CEE</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>