force-app/main/default/objects/CEE_Fournisseur__mdt/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <label>Fournisseur</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Dyneff</fullName>
                <default>true</default>
                <label>Dyneff</label>
            </value>
            <value>
                <fullName>Enovos</fullName>
            </value>
            <value>
                <fullName>Gaz Européen</fullName>
            </value>
            <value>
                <fullName>MET Energie</fullName>
            </value>
            <value>
                <fullName>OHM Energie</fullName>
            </value>
            <value>
                <fullName>SEFE Energy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>