force-app/main/default/objects/CEE_Fournisseur__mdt/fields/Type_energie__c.field-meta.xml
<CustomField>
    <fullName>Type_energie__c</fullName>
    <label>Type d&apos;énergie</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Elec</fullName>
                <default>true</default>
                <label>Elec</label>
            </value>
            <value>
                <fullName>Gaz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>